--- a/spec/internal/config/database.yml
+++ b/spec/internal/config/database.yml
@@ -1,10 +1,3 @@
-development: &defaults
-  adapter: sqlite3
-  database: db/tst.sqlite.db
-
 test:
-  <<: *defaults
-
-production:
-  <<: *defaults
-
+  adapter:  sqlite3
+  database: db/combustion_test.sqlite
