--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
+lang: ruby
+bundler_args: --without development
+before_install: 
+  - gem install bundler --pre
 rvm:
   - 1.9.3
+gemfile:
+  - gemfiles/Gemfile-rails.3.0.x
+  - gemfiles/Gemfile-rails.3.1.x
+  - gemfiles/Gemfile-rails.3.2.x
