--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,7 @@ rvm:
 gemfile:
   - gemfiles/Gemfile-rails.3.1.x
   - gemfiles/Gemfile-rails.3.2.x
+env:
+  - CACHE_STORE=redis
+  - CACHE_STORE=memcached
+  - CACHE_STORE=file_store
