--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: ruby
 
-bundler_args: --without development
-
 before_install:
   - ps aux|grep memcache
-  - mkdir tmp/cache
+  - mkdir -p tmp/cache
 
 #memcache is allowed to fail because of error while tesitng on Travis - service is running, but ruby can not connect there
 matrix:
