--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: ruby
 before_install:
   - ps aux|grep memcache
   - mkdir -p tmp/cache
+  - ls /etc/*cache*
 
 #memcache is allowed to fail because of error while tesitng on Travis - service is running, but ruby can not connect there
 matrix:
