--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: ruby
 
 before_install:
-  - mkdir -p tmp/cache spec/internal/db
+  - mkdir -p tmp/cache
+  - mkdir -p spec/internal/db
+  - memcached -p 11212 &
 
 services:
   - redis-server
-  - memcached
 
 rvm:
   - 1.9.3
